[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia_async = "0.4.0"
deadpool-postgres = "0.10.5"
futures = "0.3.30"
postgres-types = "0.2.6"
rustls = "0.23.4"
rustls-pki-types = "1.4.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.12.0"
webpki-roots = "0.26.1"
